--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,10 @@ h3{
     max-width: 420px;
 }
 
+.section__banner{
+    width: 100%;
+}
+
 .video_txt{
     color:  #FFAE00;
     font-size: 13px;
